[project]
name = "probabilitynotes"
version = "0.1.0"
description = "Set of notes on interesting discussions within Probability Theory for Finance."
authors = [
    {name = "MoeK-S",email = "101514859+MoeK-S@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book (>=2.1.1,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
