[tool.poetry]
name = "probabilitynotes"
version = "0.1.0"
description = ""
authors = ["MoeK-S <101514859+MoeK-S@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter-book = "^2.1.1"
ipykernel = "^7.1.0"
ghp-import = "^2.1.0"
numpy = "^2.4.1"
matplotlib = "^3.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
